--- a/_layouts/software-blog-home.html
+++ b/_layouts/software-blog-home.html
@@ -9,7 +9,7 @@ layout: default
 
   {{ content }}
 
-  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+  <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
   <ul class="post-list">
     {%- for post in site.posts -%}
     {%- if post.category == "software" -%}
